<resources>
    <string name="app_name">Week_Five_Task</string>
    <string name="a_dummy_image">A dummy image</string>
    <string name="registration_form">Registration Form</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sex">Sex</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="profile">My Profile</string>
    <string name="welcome_to_your_profile_page">Welcome to your Profile Page</string>



    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>