<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
       app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/registration_form"
                android:textSize="25sp" />

            <!-- Use of TextInputLayouts-->
            <!--  Name Text-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:startIconDrawable="@drawable/ic_person"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Phone Text-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:startIconDrawable="@drawable/ic_phone"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvRegisterPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Email Text-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:startIconDrawable="@drawable/ic_email"
              >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/sex"
                app:startIconDrawable="@drawable/ic_people">


              <AutoCompleteTextView
                  android:id="@+id/autoComplete"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:inputType="none"
                  android:focusable="true"
                  android:clickable="true"
                  android:focusableInTouchMode="false"
                />

            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#00bfae"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="end"
                android:text="@string/already_have_an_account"
                android:textColor="#3F5185" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/a_dummy_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login_back" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/a_dummy_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/illustration" />
</androidx.constraintlayout.widget.ConstraintLayout>